--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -2,8 +2,8 @@
 // https://guides.gradle.org/publishing-plugins-to-gradle-plugin-portal/
 
 pluginBundle {
-    website = 'https://github.com/spotbugs/spotbugs-gradle-plugin'
-    vcsUrl = 'https://github.com/spotbugs/spotbugs-gradle-plugin'
+    website = 'https://github.com/nmtbr1001/spotbugs/spotbugs-gradle-plugin'
+    vcsUrl = 'https://github.com/nmtbr1001/spotbugs/spotbugs-gradle-plugin'
     tags = [
         'spotbugs',
         'static analysis',
@@ -14,14 +14,14 @@ pluginBundle {
 gradlePlugin {
     plugins {
         spotbugsGradleBasePlugin {
-            id = 'com.github.spotbugs-base'
-            displayName = 'Official SpotBugs Gradle Base Plugin'
+            id = 'org.nmtbr1001.spotbugs.snom-base'
+            displayName = 'nmtbr1001 SpotBugs Gradle Base Plugin'
             description = 'A base Gradle plugin that runs static bytecode analysis by SpotBugs'
             implementationClass = 'com.github.spotbugs.snom.SpotBugsBasePlugin'
         }
         spotbugsGradlePlugin {
-            id = 'com.github.spotbugs'
-            displayName = 'Official SpotBugs Gradle Plugin'
+            id = 'org.nmtbr1001.spotbugs.snom'
+            displayName = 'nmtbr1001 SpotBugs Gradle Plugin'
             description = 'A Gradle plugin that runs static bytecode analysis by SpotBugs'
             implementationClass = 'com.github.spotbugs.snom.SpotBugsPlugin'
         }
